--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
             <ul class="navigation-header">
                 <li class="nav-item active"><a href="index.html">Beranda</a></li>
-                <li class="nav-item"><a href="#about">Tentang Kami</a></li>
-                <li class="nav-item"><a href="#campaign">Program</a></li>
+                <li class="nav-item"><a href="#about">Tentang</a></li>
+                <li class="nav-item"><a href="#program">Program</a></li>
                 <li class="nav-item"><a href="#motivator">Motivator</a></li>
                 <li class="nav-item"><a href="#kontak">Kontak</a></li>
                 <li class="nav-item"><a href="#">Login</a></li>
@@ -40,7 +40,7 @@
                   mandiri, beriman, tertakwa kepada Tuhan YME, dan berakhlak mulia, 
                   bergotong royong, dan berkebinekaan global.
                 </p>
-                <a href="#campaign" class="btn btn-primary">Lihat Program</a>
+                <a href="#program" class="btn btn-primary">Lihat Program</a>
             </div>
             <div id="jumbotron-illustration">
                 <img src="assets/image/illustration-header.png" alt="Illustration">
@@ -68,101 +68,108 @@
         </article>
 
         <!-- PROGRAM -->
-        <article id="campaign">
+        <article id="program">
             <h2>Program</h2>
             <div class="underline"></div>
-            <p>Bantu mereka yang membutuhkan</p>
+            <p>Program Katalis Pendidikan Indonesia</p>
 
             <!-- ATAS -->
-            <div class="campaign-container">
+            <div class="program-container">
 
                 <!-- 1 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign1.jpg">
-                        <div class="campaign-description">
-                            <h3>Lorem Ipsum</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Gorontalo</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Bimbingan Teknis (BIMTEK) Bahan Ajar</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>Paud & TK</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">50%</p>
-                                <p class="campaign-cash">Rp. 1.000.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Memberikan keterampilan bagi GURU tentang pembelajaran aktif 
+                                    dan kreatif yang sesuai dengan tahapan perkembangan anak usia 
+                                    dini.
+                                </p>
                             </div>
-                            <progress value="50" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>50 Hari Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <!-- 2 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign2.jpg">
-                        <div class="campaign-description">
-                            <h3>Dolor Dolor Sit</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Bandung</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Keterampilan Vokasional Bagi Anak Berkebutuhan Khusus Perawatan 
+                                dan Perbaikan Alat Elektronika</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>SLB</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">90%</p>
-                                <p class="campaign-cash">Rp. 125.000.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Pengajaran mengenai berbagai macam pembahasan mengenai keterampilan 
+                                    vokasi bagi anak berkebutuhan khusus utamanya dalam tema perawatan 
+                                    dan perbaikan alat elektronika rumah tangga.
+                                </p>
                             </div>
-                            <progress value="90" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>30 Hari Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <!-- 3 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign3.jpg">
-                        <div class="campaign-description">
-                            <h3>Dolor Lorem</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Bali</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Pembelajaran Inovatif Melalui Pemanfaatan Sumber Belajar</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>SD</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">5%</p>
-                                <p class="campaign-cash">Rp. 100.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Peningkatan pengetahuan peserta pelatihan, kompetensi,  pengetahuan 
+                                    dan keteramplan peserta dalam penggunaan sarana dan prasarana TIK 
+                                    untuk mendukung pemanfaatan Sumber Belajar dan model-model pembelajaran 
+                                    yang memanfaatkan konten sumber belajar daring maupun luring.
+                                </p>
                             </div>
-                            <progress value="5" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>5 Hari Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <!-- 4 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign4.jpg">
-                        <div class="campaign-description">
-                            <h3>Sit sit Lorem</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Jawa Barat</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Penyampaian Materi Berbasis Masalah</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>SMP</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">20%</p>
-                                <p class="campaign-cash">Rp. 2.000.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Agar penyampaian materi tidak bertele-tele, maka pembelajaran 
+                                    berbasis masalah bisa diterapkan. Tak jarang metode ini bisa 
+                                    membuat para peserta didik lebih fokus terhadap apa yang harus 
+                                    mereka pelajari saat ini.
+                                </p>
                             </div>
-                            <progress value="20" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>2 Jam Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
@@ -170,95 +177,102 @@
             </div>
 
             <!-- BAWAH -->
-            <div class="campaign-container">
+            <div class="program-container">
 
                 <!-- 1 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign3.jpg">
-                        <div class="campaign-description">
-                            <h3>Lorem Ipsum</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Gorontalo</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Pemanfaatan Konten Digital dan Kolaborasi Pendayagunaan TIK untuk 
+                                Pendidikan Mengakselerasi Ketercapaian Keterampilan Abad 21</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>SMA</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">50%</p>
-                                <p class="campaign-cash">Rp. 1.000.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Guru memahami tujuan mengajar dan untuk siapa kita mengajar serta 
+                                    apa yang kita punya. Sehingga “menerapkan” menjadi peran penting 
+                                    bagi masing-masing guru. Dan disini guru menjadi jembatan antara 
+                                    masa kini dan masa depan.
+                                </p>
                             </div>
-                            <progress value="50" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>50 Hari Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <!-- 2 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign4.jpg">
-                        <div class="campaign-description">
-                            <h3>Dolor Dolor Sit</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Bandung</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Bimbingan Teknis (BIMTEK) Bahan Ajar</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>Paud & TK</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">90%</p>
-                                <p class="campaign-cash">Rp. 125.000.000,00</p>
+                            <div class="program-caption">
+                                <p>Memberikan keterampilan bagi GURU tentang pembelajaran aktif 
+                                    dan kreatif yang sesuai dengan tahapan perkembangan anak usia 
+                                    dini.
+                                </p>
                             </div>
-                            <progress value="90" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>30 Hari Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <!-- 3 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign1.jpg">
-                        <div class="campaign-description">
-                            <h3>Dolor Lorem</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Bali</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Keterampilan Vokasional Bagi Anak Berkebutuhan Khusus Perawatan 
+                                dan Perbaikan Alat Elektronika</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>SLB</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">5%</p>
-                                <p class="campaign-cash">Rp. 100.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Pengajaran mengenai berbagai macam pembahasan mengenai keterampilan 
+                                    vokasi bagi anak berkebutuhan khusus utamanya dalam tema perawatan 
+                                    dan perbaikan alat elektronika rumah tangga.
+                                </p>
                             </div>
-                            <progress value="5" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>5 Hari Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
                 </div>
 
                 <!-- 4 -->
-                <div class="campaign-item">
+                <div class="program-item">
                     <a href="">
-                        <img src="assets/image/campaign2.jpg">
-                        <div class="campaign-description">
-                            <h3>Sit sit Lorem</h3>
-                            <div class="campaign-location">
-                                <img src="assets/image/location.png" alt="">
-                                <p>Jawa Barat</p>
+                        <img src="assets/image/tut-wuri-handayani.jpg">
+                        <div class="program-description">
+                            <h3>Pembelajaran Inovatif Melalui Pemanfaatan Sumber Belajar</h3>
+                            <div class="program-level">
+                                <img src="assets/image/level.png" alt="">
+                                <p>SD</p>
                             </div>
-                            <div class="campaign-status">
-                                <p class="campaign-status-percent">20%</p>
-                                <p class="campaign-cash">Rp. 2.000.000,00</p>
+                            <div class="program-caption">
+                                <p>
+                                    Peningkatan pengetahuan peserta pelatihan, kompetensi, pengetahuan 
+                                    dan keteramplan peserta dalam penggunaan sarana dan prasarana TIK 
+                                    untuk mendukung pemanfaatan Sumber Belajar dan model-model pembelajaran 
+                                    yang memanfaatkan konten sumber belajar daring maupun luring.
+                                </p>
                             </div>
-                            <progress value="20" max="100"></progress>
-                            <div class="campaign-time">
-                                <img src="assets/image/clock.png">
-                                <p>2 Jam Lagi</p>
+                            <div class="program-time">
+                                <p>Lihat Detail</p>
                             </div>
                         </div>
                     </a>
