--- a/index.html
+++ b/index.html
@@ -404,8 +404,7 @@
 
         <!-- COPYRIGHT -->
         <div class="footer-copyright">
-            <p>Copyright &copy; 2022 - Kementerian Pendidikan, Kebudayaan, Riset, dan 
-                Teknologi Republik Indonesia, Program Sekolah Penggerak. All Rights Reserved</p>
+            <p>Copyright &copy; 2022 - Sekolah Penggerak. All Rights Reserved</p>
         </div>
     </footer>
     <script src="assets/js/script.js"></script>
